Bug 105684 - LibO 5.3.0.3 Writer crashes using mailing assistant when opening template (5.2.5.1 is ok)
Summary: LibO 5.3.0.3 Writer crashes using mailing assistant when opening template (5....
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:5.3.1
Keywords: bibisected, bisected, regression
: 105918 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-02-01 22:08 UTC by Régis LG
Modified: 2017-02-15 14:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["Dialog::EndDialog(long)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Régis LG 2017-02-01 22:08:48 UTC
Hello,

LibO 5.3.0.3 64-bit (FR) is installed on Win7 64-bit

Start Writer, go to Tools\Mailing Assistant.
Select start from template, browse, select template (modern business letter) => crash

Browsing with explorer to directory: C:\Program Files\LibreOffice 5\share\template\common\wizard\letter and double-click on off-modern_l.ott opens the template without crash.
Comment 1 Xisco Faulí 2017-02-01 23:55:27 UTC
Confirmed 

Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: fc53cce64400430cdc21f79c959d75fb9a26d13d
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

but not in

Version: 5.0.0.0.alpha1+
Build ID: 0db96caf0fcce09b87621c11b584a6d81cc7df86
Locale: ca-ES (ca_ES.UTF-8)
Comment 2 Xisco Faulí 2017-02-02 00:07:16 UTC
Regression introduced by:

author	Noel Grandin <noel@peralex.com>	2016-09-21 12:48:15 (GMT)
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2016-10-27 06:08:30 (GMT)
commit eca5ea9f79181d45cd7fbabe2313617d3025818a (patch)
tree 10b5837fe04212349825742b38f5a37be9ce7009
parent bbd44f8f89839b5abb4ec6c7ea195431de5b2f48 (diff)
make the AbstractDialog stuff extend from VclReferenceBase
Because some stuff wants to multiple-inherit from VclAbstractDialog and
OutputDevice-subclasses, and we'd prefer to keep all the lifetime
management through a single smart pointer class (VclPtr)

The change in msgbox.cxx and window.cxx is to workaround a bug in
VS2013 to do with virtual inheritance and delegating constructors.

Adding Cc: to Noel Grandin
Comment 3 Commit Notification 2017-02-03 14:43:48 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71863c6188a5a0bf9dd1c31c8ad9c7b8b9b9001b

tdf#105684 crash in mail merge wizard

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2017-02-04 16:54:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aa09fd58bd499a2a2c3a32c5f613892bad54076c&h=libreoffice-5-3

tdf#105684 crash in mail merge wizard

It will be available in 5.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2017-02-05 11:22:05 UTC
Noel: is a backport for 5.2 branch planned?
Comment 6 Noel Grandin 2017-02-05 12:08:59 UTC
My commit can't be the cause in 5-2, because that commit wasn't present in 5-2. If this bug is present in 5-2 (and that part wasn't just a mistake on the reporters part), then there must be another cause.
Comment 7 Julien Nabet 2017-02-05 12:16:17 UTC
(In reply to Noel Grandin from comment #6)
> My commit can't be the cause in 5-2, because that commit wasn't present in
> 5-2. If this bug is present in 5-2 (and that part wasn't just a mistake on
> the reporters part), then there must be another cause.

Ok then so do you think we can consider this one as FIXED or do you think there's still some work to do here?
Comment 8 Xisco Faulí 2017-02-10 15:12:58 UTC
*** Bug 105918 has been marked as a duplicate of this bug. ***