tdf#105684 crash in mail merge wizard

commit eca5ea9f79181d45cd7fbabe2313617d3025818a
"make the AbstractDialog stuff extend from VclReferenceBase"
introduced this regression.

Fix up the asynchronous delete to work again - necessary because
the delete is triggered from deep inside the object it wants to
delete.

Change-Id: I18d5a899fbb2da772552ebba7fe6a8e810314010